force-app/main/default/objects/gmpkg__User_Interaction__c/gmpkg__User_Interaction__c.object-meta.xml
<CustomObject>
    <label>GM - User Interaction</label>
    <nameField>
        <displayFormat>UI-{0000000000}</displayFormat>
        <label>User Interaction #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GM - User Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>