force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__App_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__App_Code_Name__c</fullName>
    <label>App Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>