force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__App_Version__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__App_Version__c</fullName>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>