force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Application__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Application__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>