force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Browser__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Browser__c</fullName>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>