force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__City__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>