force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Click_Coordinate_X__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Click_Coordinate_X__c</fullName>
    <label>Click Coordinate X</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>