force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Component_Code__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Component_Code__c</fullName>
    <label>Component Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>