force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Component_Label__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Component_Label__c</fullName>
    <label>Component Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>