force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Component_Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Component_Type__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>