force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Country__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Country__c</fullName>
    <label>Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>