force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>