force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Host__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Host__c</fullName>
    <label>Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>