force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Language__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>