force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Login_Time__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Login_Time__c</fullName>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>