force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Login_Url__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Login_Url__c</fullName>
    <label>Login Url</label>
    <type>Url</type>
</CustomField>