force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Namespace__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>