force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Network_ID__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Network_ID__c</fullName>
    <label>Network ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>