force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Organization_Id__c</fullName>
    <label>Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>