force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Organization_Type__c</fullName>
    <label>Organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>