force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Origin__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Origin__c</fullName>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>