force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Platform__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Platform__c</fullName>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>