force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>