force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Product__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>