force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Query_String__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Query_String__c</fullName>
    <label>Query String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>