force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Screen_Height__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Screen_Height__c</fullName>
    <label>Screen Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>