force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__SObjectId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__SObjectId__c</fullName>
    <label>SObject Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>