force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__SObjectType__c</fullName>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>