force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Source_IP__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Source_IP__c</fullName>
    <label>Source IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>