force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Subdivision__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Subdivision__c</fullName>
    <label>Subdivision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>