force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>