force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>