force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__URL__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>