force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__User__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>