force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__User_Agent__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__User_Agent__c</fullName>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>