force-app/main/default/objects/gmpkg__User_Interaction__c/fields/gmpkg__Vendor__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Vendor__c</fullName>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>