force-app/main/default/objects/gmpkg__User_Interaction__c/listViews/gmpkg__All.listView-meta.xml
<ListView>
    <fullName>gmpkg__All</fullName>
    <columns>NAME</columns>
    <columns>gmpkg__Timestamp__c</columns>
    <columns>gmpkg__User__c</columns>
    <columns>gmpkg__Path__c</columns>
    <columns>gmpkg__Component_Type__c</columns>
    <columns>gmpkg__Component_Name__c</columns>
    <columns>gmpkg__Interaction_Name__c</columns>
    <columns>gmpkg__Interaction_Label__c</columns>
    <columns>gmpkg__SObjectType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>